fix flickering menu entries

--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,15 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #FF33F0;
-}
+
 
 :root {
   /* --color-primary: #FF33F0; */
   --color-primary: #F82E62;
   --color-secondary: #FFF72A;
   --color-accent: #35B5C1;
+}
+
+body {
+  background-color: var(--color-primary);
 }
